[package]
name = "inspector"
version = "0.0.1"
authors = ["Cyril Plisko <cyril.plisko@mountall.com>"]
categories = ["data-structures"]
documentation = "https://docs.rs/inspector"
keywords = ["inspect"]
license = "Apache-2.0 OR MIT"
readme = "README.md"
repository = "https://gitlab.com/imp/inspector-rs.git"
description = "General purpose inspection for popular data structures"


[badges]
gitlab = { repository = "imp/inspector-rs" }
maintenance = { status = "experimental" }
#travis-ci = { repository = "imp/inspector-rs" }

[dependencies]

[features]
#default = ["iter", "option", "result"]
default = ["option", "result"]
pedantic = []
iter = []
option = []
result = []
