[package]
name = "inspector"
version = "0.0.1"
authors = ["Cyril Plisko <cyril.plisko@mountall.com>"]
edition = "2018"
categories = ["data-structures"]
documentation = "https://docs.rs/inspector"
keywords = ["inspect"]
license = "Apache-2.0 OR MIT"
readme = "README.md"
repository = "https://gitlab.com/imp/inspector-rs.git"
description = "General purpose inspection for popular data structures"


[badges]
gitlab = { repository = "imp/inspector-rs" }
maintenance = { status = "experimental" }
travis-ci = { repository = "imp/inspector-rs" }

[dependencies]
futures = { version = "0.1", optional = true }

[features]
#default = ["iter", "option", "result"]
default = ["futures", "option", "result"]
iter = []
option = []
pedantic = []
result = []
